# SnakeGame-Console

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  Comida.cpp  Comida.h  Draw.h  Game.cpp  Game.h  Snake.cpp  Snake.h  main  main.cpp
src/Comida/: CMakeLists.txt  Comida.cpp  Comida.h
src/Food/: CMakeLists.txt  Food.cpp  Food.h
src/Game/: CMakeLists.txt  Game.cpp  Game.h
src/Snake/: CMakeLists.txt  Snake.cpp  Snake.h
src/components/: CMakeLists.txt
src/components/food/: CMakeLists.txt  food.cpp  food.h
src/components/snake/: CMakeLists.txt  snake.cpp  snake.h
src/system_actions/: CMakeLists.txt  system_actions.cpp  system_actions.h
src/utils/: BigChars.cpp  BigChars.h  CMakeLists.txt  keyboard.cpp  keyboard.h  screen.cpp  screen.h
